* CHANGES IN dplR VERSION 1.7.3


File: ads
----------------

- Added new function ads(). This is a function to calculate age-dependent splines that came via Ed Cook. The work is done in Fortran and involved a C wrapper for the Fortran code. As a result the new files are ads.R, ads.Rd for the main file and the help function. But there are new Fortran and C files (adsf.f95, adsc.c) and changes to init.c and registered.h.

File: bai.out, bai.in
----------------

- Added check to make sure `d2pith` and `diam` are data.frames and not, say, tibbles

File: ca533.Rd, cana157.Rd, co021.Rd, wa082.Rd
----------------

- Updated access dates and changed ftp to https per email from BDR on April 20 2021

* CHANGES IN dplR VERSION 1.7.2


File: glk.R sgc.R
----------------

- Revising glk for speed and adding sgc as a new function from Ronald Visser

File: chron.stabilized.R
----------------

- Adding variance stabilization from Stefan Kleese see https://github.com/AndyBunn/dplR/issues/3

File: time.rwl.R
----------------

- Adding `time<-` as a method for `time.rwl<-` and `time.crn<-` so that
  times can be set as well as retrieved from rwl and crn. Getting the NAMESPACE,
  and .Rd files right was unpleasant.

File: powt.R
----------------

- C Zang added rescale arguemnt to powt to have results align better with 
  ARSTAN output.

* CHANGES IN dplR VERSION 1.7.1

File: ccf.series.rwl.R
----------------

- Fixed stringsAsFactors issue pointed out by Kurt H

File: xdate.floater.R and .Rd
----------------

- New function to cross date a floating series (i.e., one with no dates).

* CHANGES IN dplR VERSION 1.7.0

File: insert.ring.R and delete.ring.R
----------------

- Adding an argument fix.length to maintain the length of the input and output. This makes it much easier to edit series and insert them back into a rwl object as needed.

File: plot.crs.R
----------------
