@@ -73,6 +73,7 @@ export("ads",
        "autoread.ids",
        "bai.in",
        "bai.out",
+       "caps",
        "ccf.series.rwl",
        "chron",
        "chron.stabilized",
